--- a/canvas/tsconfig.json
+++ b/canvas/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES6",
-    "module": "commonjs",
+    "target": "es6",
+    "module": "es6",
     "moduleResolution": "node",
     "sourceMap": true,
     "declaration": true,
